; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_namespace.c_makeRangeVarFromNameList.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_namespace.c_makeRangeVarFromNameList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i8* }

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_SYNTAX_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"improper relation name (too many dotted names): %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @makeRangeVarFromNameList(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call %struct.TYPE_4__* @makeRangeVar(i32* null, i32* null, i32 -1)
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @list_length(i32* %5)
  switch i32 %6, label %40 [
    i32 1, label %7
    i32 2, label %13
    i32 3, label %24
  ]

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @linitial(i32* %8)
  %10 = call i8* @strVal(i32 %9)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  br label %48

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @linitial(i32* %14)
  %16 = call i8* @strVal(i32 %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @lsecond(i32* %19)
  %21 = call i8* @strVal(i32 %20)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i8* %21, i8** %23, align 8
  br label %48

24:                                               ; preds = %1
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @linitial(i32* %25)
  %27 = call i8* @strVal(i32 %26)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 2
  store i8* %27, i8** %29, align 8
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @lsecond(i32* %30)
  %32 = call i8* @strVal(i32 %31)
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  store i8* %32, i8** %34, align 8
  %35 = load i32*, i32** %2, align 8
  %36 = call i32 @lthird(i32* %35)
  %37 = call i8* @strVal(i32 %36)
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  store i8* %37, i8** %39, align 8
  br label %48

40:                                               ; preds = %1
  %41 = load i32, i32* @ERROR, align 4
  %42 = load i32, i32* @ERRCODE_SYNTAX_ERROR, align 4
  %43 = call i32 @errcode(i32 %42)
  %44 = load i32*, i32** %2, align 8
  %45 = call i32 @NameListToString(i32* %44)
  %46 = call i32 @errmsg(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %45)
  %47 = call i32 @ereport(i32 %41, i32 %46)
  br label %48

48:                                               ; preds = %40, %24, %13, %7
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %49
}

declare dso_local %struct.TYPE_4__* @makeRangeVar(i32*, i32*, i32) #1

declare dso_local i32 @list_length(i32*) #1

declare dso_local i8* @strVal(i32) #1

declare dso_local i32 @linitial(i32*) #1

declare dso_local i32 @lsecond(i32*) #1

declare dso_local i32 @lthird(i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @NameListToString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
